--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 
 		<div class="row">
 			<div class="col-lg-2">
-				<button class="btn btn-default">
+				<button class="btn btn-default attackButton">
 					Attack
 				</button>
 
-				<button class="btn btn-default">
+				<button class="btn btn-default resetButton">
 					Reset
 				</button>
 			</div>
